fixed the alignment of div cards

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ body {
 
 .image img {
   width: 100%;
+  height: 200px;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
 }
